--- a/src/app/actores/listar-actor/listar-actor.component.html
+++ b/src/app/actores/listar-actor/listar-actor.component.html
@@ -1,1 +1,27 @@
-<p>listar-actor works!</p>
+<div>
+    <h3>Listado de actores</h3>
+
+<div class="col-12">
+    <table class="table table-striped">
+        <thead>
+            <tr>
+                <th>Nombre</th>
+                <th>Nacionalidad</th>
+                <th>Fecha_de_nacimiento</th>
+                <th>Biografia</th>
+                <th>ID</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor= 'let a of actores'>
+                <td>{{a.Nombre}}</td>
+                <td>{{a.Nacionalidad}}</td>
+                <td>{{a.Fecha_de_nacimiento}}</td>
+                <td>{{a.Biografia}}</td>
+                <td>{{a.ID}}</td>
+                <td><button type="button" class="btn btn-primary" (click)="onEditarNavigate(a.id)" title="Editar">Editar</button>&nbsp;</td>
+            </tr>
+        </tbody>
+    </table>
+</div>
+</div>
