SE CORRIGIO TODO ACTOR LISTO

--- a/src/app/actores/eliminar-actor/eliminar-actor.component.html
+++ b/src/app/actores/eliminar-actor/eliminar-actor.component.html
@@ -1,1 +1,21 @@
-<p>eliminar-actor works!</p>
+<div class="container-fluid">
+    <div class="col-lg-6 offset-3">
+      <header>
+        <h3>Eliminar Actor</h3>
+      </header>
+      <section class="container">
+        <form [formGroup]="actorForm" (ngSubmit)="!actorForm.invalid && eliminarActor(actorForm.value)">
+          <div class="row">
+            <div class="col col-12">
+              <div class="form-group mx-sm-3 mb-2">
+                <label for="id">ID del actor</label>
+                <input id="id" class="form-control" formControlName="id" readonly />
+              </div>
+            </div>
+          </div>
+          <br />
+          <button type="submit" class="btn btn-danger" [disabled]="!actorForm.valid">Eliminar</button>&nbsp;
+        </form>
+      </section>
+    </div>
+  </div>
