--- a/src/app/actores/listar-actor/listar-actor.component.html
+++ b/src/app/actores/listar-actor/listar-actor.component.html
@@ -18,8 +18,8 @@
                 <td>{{a.Nacionalidad}}</td>
                 <td>{{a.Fecha_de_nacimiento}}</td>
                 <td>{{a.Biografia}}</td>
-                <td>{{a.ID}}</td>
-                <td><button type="button" class="btn btn-primary" (click)="onEditarNavigate(a.id)" title="Editar">Editar</button>&nbsp;</td>
+                <td>{{a.idActor}}</td>
+                <td><button type="button" class="btn btn-primary" (click)="onEditarNavigate(a.idActor)" title="Editar">Editar</button>&nbsp;</td>
             </tr>
         </tbody>
     </table>
