--- a/src/app/actores/editar-actor/editar-actor.component.html
+++ b/src/app/actores/editar-actor/editar-actor.component.html
@@ -1,84 +1,48 @@
 <div class="container-fluid">
-    <div class="col-lg-6 offset-3">
-      <header>
-        <h3>Editar Actor</h3>
-      </header>
-      <section class="container">
-        <form [formGroup]="actoresForm" (ngSubmit)="!actoresForm.invalid && actualizarActor(actoresForm.value)">
-          <div class="row">
+  <div class="col-lg-6 offset-3">
+    <header>
+      <h3>Editar Actor</h3>
+    </header>
+    <section class="container">
+      <form [formGroup]="actoresForm" (ngSubmit)="!actoresForm.invalid && actualizarActor(actoresForm.value)">
+        <div class="row">
 
-            <div class="col col-12">
-              <div class="form-group mx-sm-3 mb-2">
-                <label for="nombre">nombre</label>
-                <input id="nombre" class="form-control" formControlName="nombre" maxlength="20"
-                  placeholder="nombre" />
-                <div class="alert alert-danger alert-dismissible fade show" *ngIf="
-                actoresForm.get('nombre')!.hasError('required') &&
-                actoresForm.get('nombre')!.touched">
-                  Campo requerido
-                </div>
-                <div class="alert alert-danger alert-dismissible fade show"
-                  *ngIf="actoresForm.get('nombre')!.hasError('minlength')">
-                  El contenido es muy corto.
-                </div>
+          <div class="col col-12">
+            <div class="form-group mx-sm-3 mb-2">
+              <label for="nombre">Nombre</label>
+              <input id="nombre" class="form-control" formControlName="nombre" maxlength="20"
+                placeholder="Nombre" />
+              <div class="alert alert-danger alert-dismissible fade show" *ngIf="
+              actoresForm.get('nombre')!.hasError('required') &&
+              actoresForm.get('nombre')!.touched">
+                Campo requerido
               </div>
+              <div class="alert alert-danger alert-dismissible fade show"
+                *ngIf="actoresForm.get('nombre')!.hasError('minlength')">
+                El contenido es muy corto.
+              </div>
+            </div>
 
-              
-              <div class="form-group mx-sm-3 mb-2">
-                <label for="Nacionalidad">Nacionalidad</label>
-                <input id="Nacionalidad"  class="form-control" placeholder="Nacionalidad" maxlength="30"
-                   formControlName="Nacionalidad" />
-                <div class="alert alert-danger alert-dismissible fade show" *ngIf="
-                actoresForm.get('Nacionalidad')!.hasError('required') &&
-                actoresForm.get('Nacionalidad')!.touched">
-                  Campo requerido
-                </div>
-                <div class="alert alert-danger alert-dismissible fade show"
-                  *ngIf="actoresForm.get('Nacionalidad')!.hasError('minlength')">
-                  El contenido es muy corto.
-                </div>
+            <div class="form-group mx-sm-3 mb-2">
+              <label for="Nacionalidad">Nacionalidad</label>
+              <input id="Nacionalidad"  class="form-control" placeholder="Nacionalidad" maxlength="30"
+                 formControlName="Nacionalidad" />
+              <div class="alert alert-danger alert-dismissible fade show" *ngIf="
+              actoresForm.get('Nacionalidad')!.hasError('required') &&
+              actoresForm.get('Nacionalidad')!.touched">
+                Campo requerido
               </div>
-  
-  
-              <div class="form-group mx-sm-3 mb-2">
-                <label for="color_vehiculo">color</label>
-                <!-- <input id="color" class="form-control" formControlName="color" maxlength="200" placeholder="color" /> -->
-                <select formControlName="color_vehiculo" class="form-control" >
-                  <option [ngValue]="1" [selected]="vehiculo.color_vehiculo==='1'" >rojo</option>
-                  <option [ngValue]="2" >azul</option>
-                  <option [ngValue]="3" >verde</option>
-                </select>
-                <div class="alert alert-danger alert-dismissible fade show" *ngIf="
-                vehiculoForm.get('color_vehiculo')!.hasError('required') &&
-                vehiculoForm.get('color_vehiculo')!.touched">
-                  Campo requerido
-                </div>
-                <div class="alert alert-danger alert-dismissible fade show"
-                  *ngIf="vehiculoForm.get('color_vehiculo')!.hasError('minlength')">
-                  El contenido es muy corto, debe tener al menos dos caracteres.
-                </div>
+              <div class="alert alert-danger alert-dismissible fade show"
+                *ngIf="actoresForm.get('Nacionalidad')!.hasError('minlength')">
+                El contenido es muy corto.
               </div>
-  
-  
-              <div class="form-group mx-sm-3 mb-2">
-                <label for="modelo">modelo</label>
-                <input id="modelo" class="form-control" formControlName="modelo" maxlength="100" placeholder="modelo" />
-                <div class="alert alert-danger alert-dismissible fade show" *ngIf="
-                vehiculoForm.get('modelo')!.hasError('required') &&
-                vehiculoForm.get('modelo')!.touched">
-                  Campo requerido
-                </div>
-  
-              </div>
-  
-  
-  
             </div>
           </div>
-          <br />
-          <button type="submit" class="btn btn-primary" [disabled]="!vehiculoForm.valid">Actualizar</button>&nbsp;
-         </form>
-      </section>
-    </div>
+        </div>
+        <br />
+        <button type="submit" class="btn btn-primary" [disabled]="!actoresForm.valid">Actualizar</button>&nbsp;
+       </form>
+    </section>
   </div>
+</div>
   
