--- a/src/app/directores/crear-director/crear-director.component.html
+++ b/src/app/directores/crear-director/crear-director.component.html
@@ -1,1 +1,79 @@
-<p>crear-director works!</p>
+<div class="container-fluid">
+    <div class="col-lg-6 offset-3">
+      <header>
+        <h3>Nuevo director</h3>
+      </header>
+      <section class="container">
+        <form [formGroup]="directorForm" (ngSubmit)="!directorForm.invalid && creardirector(directorForm.value)">
+          <div class="row">
+            <div class="col col-12">
+  
+              <div class="form-group mx-sm-3 mb-2">
+                <label for="nombre">Nombre</label>
+                <input id="nombre" class="form-control" formControlName="nombre" maxlength="" autocomplete="off"
+                  placeholder="Ingrese el nombre del director" />
+                <div class="alert alert-danger alert-dismissible fade show" *ngIf="
+                directorForm.get('nombre')!.hasError('required') &&
+                directorForm.get('nombre')!.touched">
+                  Campo requerido
+                </div>
+                <div class="alert alert-danger alert-dismissible fade show"
+                  *ngIf="directorForm.get('nombre')!.hasError('minlength')">
+                  El contenido es muy corto.
+                </div>
+              </div>
+              
+              <div class="form-group mx-sm-3 mb-2">
+                <label for="nacionalidad">nacionalidad</label>
+                <input id="nacionalidad"  class="form-control" placeholder="nacionalidad" maxlength="30"
+                   formControlName="nacionalidad" />
+                <div class="alert alert-danger alert-dismissible fade show" *ngIf="
+                directorForm.get('nacionalidad')!.hasError('required') &&
+                directorForm.get('nacionalidad')!.touched">
+                  Campo requerido
+                </div>
+                <div class="alert alert-danger alert-dismissible fade show"
+                  *ngIf="directorForm.get('nacionalidad')!.hasError('minlength')">
+                  El contenido es muy corto.
+                </div>
+              </div>
+  
+  
+              <div class="form-group mx-sm-3 mb-2">
+                <label for="f_nacimiento">Fecha de nacimiento</label>
+                <input id="f_nacimiento"  class="form-control" placeholder="f_nacimiento" maxlength="8"
+                   formControlName="f_nacimiento" />
+                <div class="alert alert-danger alert-dismissible fade show" *ngIf="
+                directorForm.get('f_nacimiento')!.hasError('required') &&
+                directorForm.get('f_nacimiento')!.touched">
+                  Campo requerido
+                </div>
+                <div class="alert alert-danger alert-dismissible fade show"
+                  *ngIf="directorForm.get('f_nacimiento')!.hasError('minlength')">
+                  El contenido es muy corto.
+                </div>
+              </div>
+
+              <div class="form-group mx-sm-3 mb-2">
+                <label for="biografia">Biografia</label>
+                <input id="biografia" class="form-control" formControlName="biografia" maxlength="" autocomplete="off"
+                  placeholder="Ingrese la biografia del director" />
+                <div class="alert alert-danger alert-dismissible fade show" *ngIf="
+                directorForm.get('biografia')!.hasError('required') &&
+                directorForm.get('biografia')!.touched">
+                  Campo requerido
+                </div>
+                <div class="alert alert-danger alert-dismissible fade show"
+                  *ngIf="directorForm.get('biografia')!.hasError('minlength')">
+                  El contenido es muy corto.
+                </div>
+              </div>
+  
+            </div>
+          </div>
+          <br />
+          <button type="submit" class="btn btn-primary" [disabled]="!directorForm.valid">Crear</button>&nbsp;
+         </form>
+      </section>
+    </div>
+  </div>
