--- a/src/app/directores/listar-director/listar-director.component.html
+++ b/src/app/directores/listar-director/listar-director.component.html
@@ -1,1 +1,27 @@
-<p>listar-director works!</p>
+<div>
+    <h3>Listado de directores</h3>
+
+<div class="col-12">
+    <table class="table table-striped">
+        <thead>
+            <tr>
+                <th>Nombre</th>
+                <th>Nacionalidad</th>
+                <th>Fecha_de_nacimiento</th>
+                <th>Biografia</th>
+                <th>ID</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor= 'let d of directores'>
+                <td>{{d.Nombre}}</td>
+                <td>{{d.Nacionalidad}}</td>
+                <td>{{d.Fecha_de_nacimiento}}</td>
+                <td>{{d.Biografia}}</td>
+                <td>{{d.idDirector}}</td>
+                <td><button type="button" class="btn btn-primary" (click)="onEditarNavigate(a.idDirector)" title="Editar">Editar</button>&nbsp;</td>
+            </tr>
+        </tbody>
+    </table>
+</div>
+</div>
