--- a/src/app/peliculas/peliculas-editar/peliculas-editar.component.html
+++ b/src/app/peliculas/peliculas-editar/peliculas-editar.component.html
@@ -1,1 +1,47 @@
-<p>peliculas-editar works!</p>
+<div class="container-fluid">
+    <div class="col-lg-6 offset-3">
+      <header>
+        <h3>Editar peliculas</h3>
+      </header>
+      <section class="container">
+        <form [formGroup]="peliculasForm" (ngSubmit)="!peliculasForm.invalid && actualizarpeliculas(peliculasForm.value)">
+          <div class="row">
+  
+            <div class="col col-12">
+              <div class="form-group mx-sm-3 mb-2">
+                <label for="nombre">Nombre</label>
+                <input id="nombre" class="form-control" formControlName="nombre" maxlength="20"
+                  placeholder="Nombre" />
+                <div class="alert alert-danger alert-dismissible fade show" *ngIf="
+                peliculasForm.get('nombre')!.hasError('required') &&
+                peliculasForm.get('nombre')!.touched">
+                  Campo requerido
+                </div>
+                <div class="alert alert-danger alert-dismissible fade show"
+                  *ngIf="peliculasForm.get('nombre')!.hasError('minlength')">
+                  El contenido es muy corto.
+                </div>
+              </div>
+  
+              <div class="form-group mx-sm-3 mb-2">
+                <label for="Nacionalidad">Nacionalidad</label>
+                <input id="Nacionalidad"  class="form-control" placeholder="Nacionalidad" maxlength="30"
+                   formControlName="Nacionalidad" />
+                <div class="alert alert-danger alert-dismissible fade show" *ngIf="
+                peliculasForm.get('Nacionalidad')!.hasError('required') &&
+                peliculasForm.get('Nacionalidad')!.touched">
+                  Campo requerido
+                </div>
+                <div class="alert alert-danger alert-dismissible fade show"
+                  *ngIf="peliculasForm.get('Nacionalidad')!.hasError('minlength')">
+                  El contenido es muy corto.
+                </div>
+              </div>
+            </div>
+          </div>
+          <br />
+          <button type="submit" class="btn btn-primary" [disabled]="!peliculasForm.valid">Actualizar</button>&nbsp;
+         </form>
+      </section>
+    </div>
+  </div>
