--- a/src/app/series/serie-listar/serie-listar.component.html
+++ b/src/app/series/serie-listar/serie-listar.component.html
@@ -1,79 +1,1 @@
-<div class="container-fluid">
-    <div class="col-lg-6 offset-3">
-      <header>
-        <h3>Nuevo series</h3>
-      </header>
-      <section class="container">
-        <form [formGroup]="seriesForm" (ngSubmit)="!seriesForm.invalid && crearseries(seriesForm.value)">
-          <div class="row">
-            <div class="col col-12">
-  
-              <div class="form-group mx-sm-3 mb-2">
-                <label for="nombre">Nombre</label>
-                <input id="nombre" class="form-control" formControlName="nombre" maxlength="" autocomplete="off"
-                  placeholder="Ingrese el nombre del series" />
-                <div class="alert alert-danger alert-dismissible fade show" *ngIf="
-                seriesForm.get('nombre')!.hasError('required') &&
-                seriesForm.get('nombre')!.touched">
-                  Campo requerido
-                </div>
-                <div class="alert alert-danger alert-dismissible fade show"
-                  *ngIf="seriesForm.get('nombre')!.hasError('minlength')">
-                  El contenido es muy corto.
-                </div>
-              </div>
-              
-              <div class="form-group mx-sm-3 mb-2">
-                <label for="nacionalidad">nacionalidad</label>
-                <input id="nacionalidad"  class="form-control" placeholder="nacionalidad" maxlength="30"
-                   formControlName="nacionalidad" />
-                <div class="alert alert-danger alert-dismissible fade show" *ngIf="
-                seriesForm.get('nacionalidad')!.hasError('required') &&
-                seriesForm.get('nacionalidad')!.touched">
-                  Campo requerido
-                </div>
-                <div class="alert alert-danger alert-dismissible fade show"
-                  *ngIf="seriesForm.get('nacionalidad')!.hasError('minlength')">
-                  El contenido es muy corto.
-                </div>
-              </div>
-  
-  
-              <div class="form-group mx-sm-3 mb-2">
-                <label for="f_nacimiento">Fecha de nacimiento</label>
-                <input id="f_nacimiento"  class="form-control" placeholder="f_nacimiento" maxlength="8"
-                   formControlName="f_nacimiento" />
-                <div class="alert alert-danger alert-dismissible fade show" *ngIf="
-                seriesForm.get('f_nacimiento')!.hasError('required') &&
-                seriesForm.get('f_nacimiento')!.touched">
-                  Campo requerido
-                </div>
-                <div class="alert alert-danger alert-dismissible fade show"
-                  *ngIf="seriesForm.get('f_nacimiento')!.hasError('minlength')">
-                  El contenido es muy corto.
-                </div>
-              </div>
-
-              <div class="form-group mx-sm-3 mb-2">
-                <label for="biografia">Biografia</label>
-                <input id="biografia" class="form-control" formControlName="biografia" maxlength="" autocomplete="off"
-                  placeholder="Ingrese la biografia del series" />
-                <div class="alert alert-danger alert-dismissible fade show" *ngIf="
-                seriesForm.get('biografia')!.hasError('required') &&
-                seriesForm.get('biografia')!.touched">
-                  Campo requerido
-                </div>
-                <div class="alert alert-danger alert-dismissible fade show"
-                  *ngIf="seriesForm.get('biografia')!.hasError('minlength')">
-                  El contenido es muy corto.
-                </div>
-              </div>
-  
-            </div>
-          </div>
-          <br />
-          <button type="submit" class="btn btn-primary" [disabled]="!seriesForm.valid">Crear</button>&nbsp;
-         </form>
-      </section>
-    </div>
-  </div>
+<p>serie-listar works!</p>
