editar-serie listo

--- a/src/app/series/series-eliminar/series-eliminar.component.html
+++ b/src/app/series/series-eliminar/series-eliminar.component.html
@@ -1,1 +1,21 @@
-<p>series-eliminar works!</p>
+<div class="container-fluid">
+    <div class="col-lg-6 offset-3">
+      <header>
+        <h3>Eliminar serie</h3>
+      </header>
+      <section class="container">
+        <form [formGroup]="serieForm" (ngSubmit)="!serieForm.invalid && eliminarserie(serieForm.value)">
+          <div class="row">
+            <div class="col col-12">
+              <div class="form-group mx-sm-3 mb-2">
+                <label for="id">ID del serie</label>
+                <input id="id" class="form-control" formControlName="id" readonly />
+              </div>
+            </div>
+          </div>
+          <br />
+          <button type="submit" class="btn btn-danger" [disabled]="!serieForm.valid">Eliminar</button>&nbsp;
+        </form>
+      </section>
+    </div>
+  </div>
